--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,12 @@
     flex-direction: row-reverse;
 }
 
+.container{
+     width: 100%;
+    margin: 0 auto;
+
+}
+
 .ht-60{
     height: 60px;
 }
@@ -105,9 +111,10 @@ header{
 
 /* Main */
 
-.main-box{
+.main-container{
     width: 100%;
-    margin: 0 auto;  
+    margin: 0 auto;
+    
 }
 
 .main-box{
