feat: wip footer.

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,14 @@
     background-color: #228B23;
 }
 
+.bg-peach{
+    background-color: #F18080;
+}
+
+.bg-lt-green{
+    background-color: #1EB2AA;
+}
+
 .dsp-inbl {
     display: inline-block;
 }
@@ -147,5 +155,30 @@ header {
     width: 70%;
     margin: 30px auto;
     border-radius: 5px;
-    ß
+}
+
+/* Footer */
+.main-footer{
+    width: 70%;
+    margin: 0 auto;
+}
+
+
+
+.box-foot{
+    width: 20%;
+    margin: 10px auto;
+    border-radius: 5px;
+
+}
+
+.box-nav{
+    width: 80%;
+    margin: 10px auto;
+}
+
+.box-nav-li{
+    width: 25%;
+    margin: 0 auto;
+    border-radius: 5px;
 }
